--- a/IssuesApp.rx/Base.lproj/Main.storyboard
+++ b/IssuesApp.rx/Base.lproj/Main.storyboard
@@ -247,7 +247,7 @@
             </objects>
             <point key="canvasLocation" x="1713" y="-160"/>
         </scene>
-        <!--Issues View Controller-->
+        <!--Title-->
         <scene sceneID="caP-6k-3Fs">
             <objects>
                 <viewController id="x7F-jc-i2i" customClass="IssuesViewController" customModule="IssuesApp_rx" customModuleProvider="target" sceneMemberID="viewController">
@@ -280,6 +280,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Hfy-tk-PWq"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="5LC-fT-X1T">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="tWt-jO-tkC">
+                            <connections>
+                                <segue destination="iov-p2-JkH" kind="presentation" identifier="presentToCreateIssueSegue" id="yJR-2E-CGY"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="Kui-Uf-EXy" id="7Hv-TF-aDj"/>
                         <segue destination="cI5-1d-ljB" kind="show" identifier="pushToDetail" id="QaX-no-gIl"/>
@@ -288,6 +295,75 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GAh-Pa-08Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2672.8000000000002" y="-161.46926536731635"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="T28-qN-cc7">
+            <objects>
+                <navigationController id="iov-p2-JkH" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WiP-mz-x8o">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.63" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="0.20000000000000001" alpha="1" colorSpace="calibratedWhite"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="du8-bz-2hB" kind="relationship" relationship="rootViewController" id="jnE-xY-7c1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e4M-Lc-ELS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2673" y="-869"/>
+        </scene>
+        <!--Create Issue-->
+        <scene sceneID="aGO-1e-37f">
+            <objects>
+                <viewController id="du8-bz-2hB" customClass="CreateIssueViewController" customModule="IssuesApp_rx" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uBb-5Y-5zg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BGL-4m-zMd">
+                                <rect key="frame" x="16" y="80" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="mdB-hy-A3e">
+                                <rect key="frame" x="16" y="126" width="343" height="525"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="BGL-4m-zMd" firstAttribute="top" secondItem="IbA-45-h2U" secondAttribute="top" constant="16" id="7LB-YY-XDj"/>
+                            <constraint firstItem="IbA-45-h2U" firstAttribute="bottom" secondItem="mdB-hy-A3e" secondAttribute="bottom" constant="16" id="Gl6-Jy-gLn"/>
+                            <constraint firstItem="IbA-45-h2U" firstAttribute="trailing" secondItem="mdB-hy-A3e" secondAttribute="trailing" constant="16" id="HgH-Xb-xW6"/>
+                            <constraint firstItem="IbA-45-h2U" firstAttribute="trailing" secondItem="BGL-4m-zMd" secondAttribute="trailing" constant="16" id="VRF-pr-g6W"/>
+                            <constraint firstItem="BGL-4m-zMd" firstAttribute="leading" secondItem="IbA-45-h2U" secondAttribute="leading" constant="16" id="dth-es-Qfy"/>
+                            <constraint firstItem="mdB-hy-A3e" firstAttribute="top" secondItem="BGL-4m-zMd" secondAttribute="bottom" constant="16" id="oJu-n6-jpG"/>
+                            <constraint firstItem="mdB-hy-A3e" firstAttribute="leading" secondItem="IbA-45-h2U" secondAttribute="leading" constant="16" id="qj9-cl-hYu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="IbA-45-h2U"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Create Issue" id="uAk-LD-EJ5">
+                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="tLj-O4-fSh"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="m0Z-v8-XcK"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="bodyTextView" destination="mdB-hy-A3e" id="plq-8a-5fb"/>
+                        <outlet property="closeButton" destination="tLj-O4-fSh" id="P6m-TW-DC5"/>
+                        <outlet property="doneButton" destination="m0Z-v8-XcK" id="dU8-Eb-vzK"/>
+                        <outlet property="titleTextField" destination="BGL-4m-zMd" id="yIV-Go-pIy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S6a-uJ-qVr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3408.8000000000002" y="-876.61169415292363"/>
         </scene>
         <!--Issue Detail View Controller-->
         <scene sceneID="KCE-Dq-G8Y">
